# cppUtils

./: .clang-format  .gitignore  CMakeLists.txt  README.md
geomComponents/inc/: curve.h  matrix.h  plane.h
geomComponents/src/: geometryHelpers.cpp
geomUtils/: .syntastic_cpp_config  CMakeLists.txt  curve.cpp  geometryHelpers.cpp  geometryHelpers.h  matrix.cpp  mesh.h  plane.cpp  point.h  rect.h  shape.h
geomUtils/inc/: curve.h  geometryHelpers.h  point.h  vector.h
geomUtils/src/: geometryHelpers.cpp  mesh.cpp  precomp.h
inc/geomUtils/: point.h  polyline.h  vector.h
inc/mathUtils/: vectorSpace.h
inc/utils/: collectionHelpers.h  color.h  constants.h  helpers.h  numHelpers.h
nonRefactored/componentsBase/: CMakeLists.txt
nonRefactored/componentsBase/inc/: component.h
nonRefactored/geomComponents/: CMakeLists.txt
nonRefactored/geomComponents/inc/: boundingBox.h  geometryHelpers.h  mesh.h  plane.h
nonRefactored/renderUtils/: renderingVisitor.cpp  sceneGraphVisitor.h
nonRefactored/temp/: refactored.cpp
nonRefactored/windowComponents/: mouseGestureComponent.cpp  mouseGestureComponent.h  viewInterface.h  viewport.h  viewportManager.cpp  viewportManager.h
renderUtils/: drawable.h  resourceWrappers.h  sceneGraph.cpp  sceneGraph.h
src/: CMakeLists.txt
src/geomUtils/: CMakeLists.txt  CMakeLists.txt~
src/utils/: .syntastic_cpp_config  CMakeLists.txt  numHelpers.cpp
temp/: refactored.h
test/: CMakeLists.txt
test/geomUtils/: pointTest.cpp  polylineTest.cpp
tools/: enumGen.py
utils/: CMakeLists.txt  debug.h  helpers.cpp  helpers.h
utils/inc/: boundedCardinalitySet.h  collectionHelpers.h  color.cpp  color.h  colors.config  debug.h  functionHelpers.h  helpers.h  strHelpers.h
utils/src/: .syntastic_cpp_config  helpers.cpp  strHelpers.cpp
viewInterface/: IInputState.h  precomp.h  viewInterface.h  viewport.cpp  viewportHost.h  window.cpp  window.h
